add basic file upload support (no drag&drop yet)
